--- a/128. Longest Consecutive Sequence.md
+++ b/128. Longest Consecutive Sequence.md
@@ -1,4 +1,4 @@
-## [128. Longest Consecutive Sequence][5]
+## 128. Longest Consecutive Sequence
 
 >  Given an unsorted array of integers, find the length of the longest consecutive elements sequence.
 
